--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "history": "^5.3.0",
+    "https-proxy-agent": "^7.0.6",
     "minipass": "^7.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "undici": "^7.14.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
